--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,4 @@
-altair==5.5.0
-attrs==25.4.0
-blinker==1.9.0
-cachetools==6.2.4
-certifi==2025.11.12
-charset-normalizer==3.4.4
-choreographer==1.2.1
-click==8.1.8
-contourpy==1.3.0
-cycler==0.12.1
-et-xmlfile==2.0.0
-exceptiongroup==1.3.1
-fonttools==4.60.2
-fpdf==1.7.2
-gitdb==4.0.12
-gitpython==3.1.45
-idna==3.11
-importlib-resources==6.5.2
-iniconfig==2.1.0
-jinja2==3.1.6
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-kaleido==1.2.0
-kiwisolver==1.4.7
-logistro==2.0.1
-markupsafe==3.0.3
-matplotlib==3.9.4
-narwhals==2.14.0
-numpy==2.0.2
-openpyxl==3.1.5
-orjson==3.11.5
-packaging==25.0
-pandas==2.3.3
-pillow==11.3.0
-plotly==6.5.0
-pluggy==1.6.0
-protobuf==6.33.2
-pyarrow==21.0.0
-pydeck==0.9.1
-pygments==2.19.2
-pyparsing==3.3.1
-pytest==8.4.2
-pytest-timeout==2.4.0
-python-dateutil==2.9.0.post0
-pytz==2025.2
-referencing==0.36.2
-reportlab==4.4.7
-requests==2.32.5
-rpds-py==0.27.1
-simplejson==3.20.2
-six==1.17.0
-smmap==5.0.2
-streamlit==1.50.0
-tenacity==9.1.2
-toml==0.10.2
-tomli==2.3.0
-tornado==6.5.4
-typing-extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.2
-watchdog==6.0.0
-zipp==3.23.0
+streamlit
+pandas
+numpy
+plotly
